feat: Create xp features
