# src/xp/cancel/models.go
@@ -1,0 +1,9 @@
+package cancel
+
+type Request struct {
+	UserID string `json:"user-id"`
+}
+
+type Response struct {
+	Status string `json:"insurance-status"`
+}
